@@ -1,5 +1,6 @@
 #include "fontdata.h"
 
+#include <X11/Xft/Xft.h>
 #include <sstream>
 
 #include "globals.h"
@@ -11,6 +12,9 @@ using std::stringstream;
 XConnection* FontData::s_xconnection = nullptr;
 
 FontData::~FontData() {
+    if (xftFont_ && s_xconnection) {
+        XftFontClose(s_xconnection->display(), xftFont_);
+    }
     if (xFontStruct_ && s_xconnection) {
         XFreeFont(s_xconnection->display(), xFontStruct_);
     }
@@ -25,8 +29,17 @@ void FontData::initFromStr(const string& source)
     if (!s_xconnection) {
         throw std::invalid_argument("X connection not established yet!");
     }
-
-    // plain X fonts with unicode support
+    // if the font starts with a '-', then treat it as a XLFD and
+    // don't pass it to xft
+    if (!source.empty() && source[0] != '-') {
+        xftFont_ = XftFontOpenName(s_xconnection->display(),
+                                   s_xconnection->screen(),
+                                   source.c_str());
+    }
+    if (xftFont_) {
+        return;
+    }
+    // fall back to plain X fonts with unicode support
     char** missingCharSetList = nullptr;
     int missingCharSetCount = 0;
     char* defString = nullptr;
